--- a/src/locales/translations/pt-BR.json
+++ b/src/locales/translations/pt-BR.json
@@ -1,3 +1,7 @@
 {
+	"views.Counter.increment": "Aumentar",
+	"views.Counter.decrement": "Diminuir",
+	"views.Counter.incrementAsync": "Aumentar Async",
+	"views.Counter.decrementAsync": "Diminuir Async",
   "views.Home.counter": "Contador"
 }
